--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 spring.application.name=Address-Book
 
 # MySQL Database Configuration
-# Create database if not exists
 spring.datasource.url=jdbc:mysql://localhost:3306/address
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=arpit
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate properties
-spring.jpa.hibernate.ddl-auto=update
+# Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
