added memory for database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,21 @@
 spring.application.name=Address-Book
 
-# MySQL Database Configuration
-# Create database if not exists
-spring.datasource.url=jdbc:mysql://localhost:3306/address
+
+
+
+
+# Enable H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:address
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate properties
+
+# Hibernate (JPA) Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
